--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     </div>
   </div>
 </div>
-
+  <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 border-top bg-dark text-white">
+    <div class="text-center">
+      <span class="mb-3 mb-md-0 text-white">© 2023 Vishal Sohani</span>
+    </div>
+  </footer>
 </body>
 </html>
 <script>
