created slug generator page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <!-- <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+    </a> -->
 
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 text-center">
+      <li><a href="/index.html" class="nav-link px-2 link-secondary">Home</a></li>
+      <li><a href="/create-slug.html" class="nav-link px-2 link-dark">Slug Generator</a></li>
+    </ul>
+
+    <!-- <div class="col-md-3 text-end">
+      <button type="button" class="btn btn-outline-primary me-2">Login</button>
+      <button type="button" class="btn btn-primary">Sign-up</button>
+    </div> -->
+  </header>
 <div class="container-fluid p-5 bg-dark text-white text-center">
   <h1>Words and characters counts</h1>
   <p>"Discover the magic of language, expressing ideas concisely while keeping a watchful eye on word and character limits.</p> 
