--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </a> -->
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 text-center">
-      <li><a href="/index.html" class="nav-link px-2 link-secondary">Home</a></li>
+      <li><a href="/all-in-one-tools/index.html" class="nav-link px-2 link-secondary">Home</a></li>
       <li><a href="/all-in-one-tools/create-slug.html" class="nav-link px-2 link-dark">Slug Generator</a></li>
     </ul>
 
