qr-code generated page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 text-center">
       <li><a href="/all-in-one-tools/index.html" class="nav-link px-2 link-secondary">Home</a></li>
       <li><a href="/all-in-one-tools/create-slug.html" class="nav-link px-2 link-dark">Slug Generator</a></li>
+      <li><a href="/all-in-one-tools/qr-code-generator.html" class="nav-link px-2 link-dark">QR CODE GENERATOR</a></li>
     </ul>
 
     <!-- <div class="col-md-3 text-end">
